--- a/Todo/Source/Main/TodoListTableViewCell.xib
+++ b/Todo/Source/Main/TodoListTableViewCell.xib
@@ -28,7 +28,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 33" translatesAutoresizingMaskIntoConstraints="NO" id="JLf-xh-XBD">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bookmark_green" translatesAutoresizingMaskIntoConstraints="NO" id="JLf-xh-XBD">
                         <rect key="frame" x="385.5" y="42" width="25.5" height="26"/>
                         <color key="tintColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -74,8 +74,8 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="Group 33" width="341" height="341"/>
         <image name="alarm" width="341" height="341"/>
+        <image name="bookmark_green" width="341" height="341"/>
         <image name="emptyBox" width="341" height="341"/>
     </resources>
 </document>
