--- a/Todo/Source/Base.lproj/Home.storyboard
+++ b/Todo/Source/Base.lproj/Home.storyboard
@@ -111,7 +111,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2uW-Mn-YhU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4148" y="-177"/>
+            <point key="canvasLocation" x="5057.971014492754" y="-177.45535714285714"/>
         </scene>
         <!--Alarm Setting View Controller-->
         <scene sceneID="K5A-F8-lYb">
@@ -169,7 +169,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gaG-da-Hox" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7130" y="-177"/>
+            <point key="canvasLocation" x="8373.9130434782619" y="-177.45535714285714"/>
         </scene>
         <!--Open Source View Controller-->
         <scene sceneID="nqo-mN-9po">
@@ -217,7 +217,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x84-FQ-15V" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7852" y="-177"/>
+            <point key="canvasLocation" x="9097.1014492753638" y="-177.45535714285714"/>
         </scene>
         <!--Screen Setting View Controller-->
         <scene sceneID="z6f-dZ-K5h">
@@ -348,7 +348,33 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1IG-Dc-m9f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5671.0144927536239" y="-177.45535714285714"/>
+            <point key="canvasLocation" x="6915.9420289855079" y="-177.45535714285714"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="JGj-ee-Uy7">
+            <objects>
+                <viewController id="8Or-CZ-ot5" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lQg-Gi-zlI">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7H6-1J-rSM">
+                                <rect key="frame" x="87" y="359" width="240" height="128"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="g2O-hO-ShL"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="7H6-1J-rSM" firstAttribute="leading" secondItem="g2O-hO-ShL" secondAttribute="leading" constant="87" id="1PT-8Z-lGP"/>
+                            <constraint firstItem="g2O-hO-ShL" firstAttribute="trailing" secondItem="7H6-1J-rSM" secondAttribute="trailing" constant="87" id="aJd-1R-mYM"/>
+                            <constraint firstItem="g2O-hO-ShL" firstAttribute="bottom" secondItem="7H6-1J-rSM" secondAttribute="bottom" constant="375" id="mJh-ho-Jcc"/>
+                            <constraint firstItem="7H6-1J-rSM" firstAttribute="top" secondItem="g2O-hO-ShL" secondAttribute="top" constant="315" id="n5D-bC-os2"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A8B-Uv-WU1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6160.8695652173919" y="-177.45535714285714"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="hwE-c2-2vF">
@@ -659,10 +685,10 @@
             </objects>
             <point key="canvasLocation" x="1431.8840579710145" y="-177.45535714285714"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Main Navigation Controller-->
         <scene sceneID="H3b-kH-vTI">
             <objects>
-                <navigationController navigationBarHidden="YES" id="mQx-h7-VB4" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="MainNavigationController" navigationBarHidden="YES" id="mQx-h7-VB4" customClass="MainNavigationController" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ec0-XC-5dY">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -1179,7 +1205,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iC8-9I-6Vx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6417" y="-177"/>
+            <point key="canvasLocation" x="7634.7826086956529" y="-177.45535714285714"/>
         </scene>
     </scenes>
     <resources>
