--- a/Todo/Source/Base.lproj/Home.storyboard
+++ b/Todo/Source/Base.lproj/Home.storyboard
@@ -693,7 +693,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="bnR-Uq-4PM" kind="relationship" relationship="rootViewController" id="I5R-kG-r4E"/>
+                        <segue destination="bnR-Uq-4PM" kind="relationship" relationship="rootViewController" id="C70-2Z-Exu"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yFZ-Lz-eAf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
