--- a/Todo/Source/Base.lproj/Home.storyboard
+++ b/Todo/Source/Base.lproj/Home.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mQx-h7-VB4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bnR-Uq-4PM">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -350,25 +350,39 @@
             </objects>
             <point key="canvasLocation" x="6915.9420289855079" y="-177.45535714285714"/>
         </scene>
-        <!--View Controller-->
+        <!--Todo Manual View Controller-->
         <scene sceneID="JGj-ee-Uy7">
             <objects>
-                <viewController id="8Or-CZ-ot5" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TodoManualViewController" id="8Or-CZ-ot5" customClass="TodoManualViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lQg-Gi-zlI">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7H6-1J-rSM">
-                                <rect key="frame" x="87" y="359" width="240" height="128"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="walkThrough" translatesAutoresizingMaskIntoConstraints="NO" id="7H6-1J-rSM">
+                                <rect key="frame" x="20" y="103" width="374" height="719"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dkw-8X-f4m">
+                                <rect key="frame" x="20" y="64" width="29" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="dkw-8X-f4m" secondAttribute="height" id="BKL-Fd-6hH"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="left"/>
+                                <connections>
+                                    <action selector="backToSettingVC:" destination="8Or-CZ-ot5" eventType="touchUpInside" id="O5J-HP-tHR"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="g2O-hO-ShL"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="7H6-1J-rSM" firstAttribute="leading" secondItem="g2O-hO-ShL" secondAttribute="leading" constant="87" id="1PT-8Z-lGP"/>
-                            <constraint firstItem="g2O-hO-ShL" firstAttribute="trailing" secondItem="7H6-1J-rSM" secondAttribute="trailing" constant="87" id="aJd-1R-mYM"/>
-                            <constraint firstItem="g2O-hO-ShL" firstAttribute="bottom" secondItem="7H6-1J-rSM" secondAttribute="bottom" constant="375" id="mJh-ho-Jcc"/>
-                            <constraint firstItem="7H6-1J-rSM" firstAttribute="top" secondItem="g2O-hO-ShL" secondAttribute="top" constant="315" id="n5D-bC-os2"/>
+                            <constraint firstItem="7H6-1J-rSM" firstAttribute="leading" secondItem="g2O-hO-ShL" secondAttribute="leading" constant="20" id="1PT-8Z-lGP"/>
+                            <constraint firstItem="dkw-8X-f4m" firstAttribute="width" secondItem="lQg-Gi-zlI" secondAttribute="width" multiplier="0.07" id="8Ns-ey-bsw"/>
+                            <constraint firstItem="dkw-8X-f4m" firstAttribute="leading" secondItem="g2O-hO-ShL" secondAttribute="leading" constant="20" id="BuB-FX-j4d"/>
+                            <constraint firstItem="7H6-1J-rSM" firstAttribute="top" secondItem="dkw-8X-f4m" secondAttribute="bottom" constant="10" id="LOf-mU-VAG"/>
+                            <constraint firstItem="g2O-hO-ShL" firstAttribute="trailing" secondItem="7H6-1J-rSM" secondAttribute="trailing" constant="20" id="aJd-1R-mYM"/>
+                            <constraint firstItem="g2O-hO-ShL" firstAttribute="bottom" secondItem="7H6-1J-rSM" secondAttribute="bottom" constant="40" id="mJh-ho-Jcc"/>
+                            <constraint firstItem="dkw-8X-f4m" firstAttribute="top" secondItem="g2O-hO-ShL" secondAttribute="top" constant="20" id="t4r-Wn-DX3"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -684,21 +698,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cc5-7D-dPa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1431.8840579710145" y="-177.45535714285714"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="H3b-kH-vTI">
-            <objects>
-                <navigationController navigationBarHidden="YES" id="mQx-h7-VB4" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ec0-XC-5dY">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="bnR-Uq-4PM" kind="relationship" relationship="rootViewController" id="C70-2Z-Exu"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="yFZ-Lz-eAf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-629" y="-177"/>
         </scene>
         <!--Main View Controller-->
         <scene sceneID="Mb9-ZR-NBB">
@@ -1220,6 +1219,7 @@
         <image name="right" width="341" height="341"/>
         <image name="search" width="341" height="341"/>
         <image name="trash" width="341" height="341"/>
+        <image name="walkThrough" width="642" height="1389"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
